--- a/source/catalog.html
+++ b/source/catalog.html
@@ -135,7 +135,7 @@
 
       <ul class="novelties-sc__list d-flex">
         <li class="novelties-sc__item card">
-          <div class="card__sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
+          <div class="card__sale sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
 
           <img class="card__img" src="./img/card1.png" alt="">
 
@@ -146,13 +146,13 @@
             (фуксия/яркий никель)
           </p>
 
-          <div class="card__prices d-flex">
-            <p class="card__cur-price"><span>44900</span>&nbsp;&#8381;</p>
-            <p class="card__old-price"><span>70900</span>&#8381;</p>
+          <div class="card__prices prices d-flex">
+            <p class="prices__cur-price"><span>44900</span>&nbsp;&#8381;</p>
+            <p class="prices__old-price"><span>70900</span>&#8381;</p>
           </div>
         </li>
         <li class="novelties-sc__item card">
-          <div class="card__sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
+          <div class="card__sale sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
 
           <img class="card__img" src="./img/card2.png" alt="">
 
@@ -163,13 +163,13 @@
             (берлинская лазурь/медь)
           </p>
 
-          <div class="card__prices d-flex">
-            <p class="card__cur-price"><span>44900</span>&nbsp;&#8381;</p>
-            <p class="card__old-price"><span>70900</span>&#8381;</p>
+          <div class="card__prices prices d-flex">
+            <p class="prices__cur-price"><span>44900</span>&nbsp;&#8381;</p>
+            <p class="prices__old-price"><span>70900</span>&#8381;</p>
           </div>
         </li>
         <li class="novelties-sc__item card from-sm">
-          <div class="card__sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
+          <div class="card__sale sale"><span class="from-lg">Sale </span><span class="to-lg">-</span>3%</div>
 
           <img class="card__img" src="./img/card3.png" alt="">
 
@@ -180,9 +180,9 @@
             (медь)
           </p>
 
-          <div class="card__prices d-flex">
-            <p class="card__cur-price"><span>44900</span>&nbsp;&#8381;</p>
-            <p class="card__old-price"><span>70900</span>&#8381;</p>
+          <div class="card__prices prices d-flex">
+            <p class="prices__cur-price"><span>44900</span>&nbsp;&#8381;</p>
+            <p class="prices__old-price"><span>70900</span>&#8381;</p>
           </div>
         </li>
       </ul>
@@ -200,7 +200,7 @@
         <input type="email" name="email" class="callback__input" placeholder="Email">
         <input type="text" name="phone" class="callback__input" placeholder="Телефон">
         <textarea name="message" class="callback__input callback__input--textarea" rows="10" placeholder="Сообщение"></textarea>
-        <input type="submit" class="callback__submit btn" value="Отправить">
+        <button type="submit" class="callback__submit btn">Отправить</button>
       </form>
     </section>
 
