--- a/source/contacts.html
+++ b/source/contacts.html
@@ -28,19 +28,19 @@
     <ul class="contacts__list">
       <li>
         <a class="contacts__link" href="">
-          <img src="./img/phone.png" alt="">
+          <img src="./img/phone.svg" alt="">
           +7(495)106-57-69
         </a>
       </li>
       <li>
         <a class="contacts__link" href="">
-          <img src="./img/whatsapp.png" alt="">
+          <img src="./img/whatsapp.svg" alt="">
           WhatsApp
         </a>
       </li>
       <li>
         <a class="contacts__link" href="">
-          <img src="./img/telegram.png" alt="">
+          <img src="./img/telegram.svg" alt="">
           Telegram
         </a>
       </li>
