--- a/source/registration.html
+++ b/source/registration.html
@@ -13,13 +13,15 @@
   </div>
 
   <section class="registration">
-    <div class="registration__top-img">
-      <picture>
-        <source media="(min-width: 1025px)" srcset="./img/registration_top_xl.webp">
-        <source media="(min-width: 769px)" srcset="./img/registration_top_lg.webp">
-        <source media="(min-width: 421px)" srcset="./img/registration_top_sm.webp">
-        <img src="./img/registration_top_xs.webp" alt="">
-      </picture>
+    <div class="registration__top-img-wrap">
+      <div class="registration__top-img">
+        <picture>
+          <source media="(min-width: 1025px)" srcset="./img/registration_top_xl.webp">
+          <source media="(min-width: 769px)" srcset="./img/registration_top_lg.webp">
+          <source media="(min-width: 421px)" srcset="./img/registration_top_sm.webp">
+          <img src="./img/registration_top_xs.webp" alt="">
+        </picture>
+      </div>
     </div>
 
     <h2 class="registration__title h2">Регистрация устройства</h2>
