--- a/source/guarantee.html
+++ b/source/guarantee.html
@@ -13,13 +13,15 @@
   </div>
 
   <section class="guarantee">
-    <div class="guarantee__top-img">
-      <picture>
-        <source media="(min-width: 1025px)" srcset="./img/guarantee_top.webp">
-        <source media="(min-width: 769px)" srcset="./img/guarantee_top_lg.webp">
-        <source media="(min-width: 421px)" srcset="./img/guarantee_top_sm.webp">
-        <img src="./img/guarantee_top_xs.webp" alt="">
-      </picture>
+    <div class="guarantee__top-img-wrap">
+      <div class="guarantee__top-img">
+        <picture>
+          <source media="(min-width: 1025px)" srcset="./img/guarantee_top.webp">
+          <source media="(min-width: 769px)" srcset="./img/guarantee_top_lg.webp">
+          <source media="(min-width: 421px)" srcset="./img/guarantee_top_sm.webp">
+          <img src="./img/guarantee_top_xs.webp" alt="">
+        </picture>
+      </div>
     </div>
 
     <h2 class="guarantee__title h2">Гарантия</h2>
@@ -52,17 +54,17 @@
       </p>
     </div>
 
-    <ul class="guarantee__certificates">
-      <li>
+    <div class="guarantee__certificates owl-carousel">
+      <div class="item">
         <a class="guarantee__certificate" href="./img/sert_1.png"><img src="./img/sert_1.png" alt=""></a>
-      </li>
-      <li>
+      </div>
+      <div class="item">
         <a class="guarantee__certificate" href="./img/sert_2.png"><img src="./img/sert_2.png" alt=""></a>
-      </li>
-      <li>
+      </div>
+      <div class="item">
         <a class="guarantee__certificate" href="./img/sert_3.png"><img src="./img/sert_3.png" alt=""></a>
-      </li>
-    </ul>
+      </div>
+    </div>
 
 
     <a href="/" class="guarantee__link btn">Перейти на главную Dyson</a>
