--- a/source/guarantee.html
+++ b/source/guarantee.html
@@ -13,13 +13,13 @@
   </div>
 
   <section class="guarantee">
-    <div class="guarantee__top-img-wrap">
+    <div class="guarantee__top-img-wrap full-width">
       <div class="guarantee__top-img">
         <picture>
-          <source media="(min-width: 1025px)" srcset="./img/guarantee_top.webp">
-          <source media="(min-width: 769px)" srcset="./img/guarantee_top_lg.webp">
-          <source media="(min-width: 421px)" srcset="./img/guarantee_top_sm.webp">
-          <img src="./img/guarantee_top_xs.webp" alt="">
+          <source media="(min-width: 1025px)" srcset="./img/guarantee_top.webp" />
+          <source media="(min-width: 769px)" srcset="./img/guarantee_top_lg.webp" />
+          <source media="(min-width: 421px)" srcset="./img/guarantee_top_sm.webp" />
+          <img src="./img/guarantee_top_xs.webp" alt="" />
         </picture>
       </div>
     </div>
@@ -35,7 +35,7 @@
         Все товары официальные, на них действует гарантия в авторизованных центрах Dyson. Срок зависит от типа
         продукции:
       </p>
-      <br>
+      <br />
       <ul>
         <li>фены и стайлеры - 2 года;</li>
         <li>пылесосы - 5 лет;</li>
@@ -47,7 +47,7 @@
         <li>мелкие аксессуары - 1 год;</li>
         <li>сумки и чехлы для техники - 90 дней.</li>
       </ul>
-      <br>
+      <br />
       <p>
         Вся продукция Dyson сертифицирована, у нас имеются сертификаты на любой товар бренда. Ознакомиться с этими
         документами можно на странице.
@@ -56,20 +56,18 @@
 
     <div class="guarantee__certificates owl-carousel">
       <div class="item">
-        <a class="guarantee__certificate" href="./img/sert_1.png"><img src="./img/sert_1.png" alt=""></a>
+        <a class="guarantee__certificate" href="./img/sert_1.png"><img src="./img/sert_1.png" alt="" /></a>
       </div>
       <div class="item">
-        <a class="guarantee__certificate" href="./img/sert_2.png"><img src="./img/sert_2.png" alt=""></a>
+        <a class="guarantee__certificate" href="./img/sert_2.png"><img src="./img/sert_2.png" alt="" /></a>
       </div>
       <div class="item">
-        <a class="guarantee__certificate" href="./img/sert_3.png"><img src="./img/sert_3.png" alt=""></a>
+        <a class="guarantee__certificate" href="./img/sert_3.png"><img src="./img/sert_3.png" alt="" /></a>
       </div>
     </div>
-
 
     <a href="/" class="guarantee__link btn">Перейти на главную Dyson</a>
   </section>
 
-  @@include('./_delivery-sc.html', { "class": "delivery-sc--light" })
-
-  @@include('./_footer.html', { "class": "" })
+  @@include('./_delivery-sc.html', { "class": "delivery-sc--light" }) @@include('./_footer.html', { "class": "" })
+</main>
