--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,7 @@
 @@include('./_header.html')
 
 <main class="main d-flex flex-column">
-  <section class="banner order-1">
+  <!-- <section class="banner order-1">
 
     <div class="banner__carousel owl-theme owl-carousel js_banner_carousel">
 
@@ -118,66 +118,67 @@
       </div>
 
     </div>
-  </section>
+  </section> -->
 
   <section class="video-banner order-1">
-    <div class="video-container">
-      <video width="100%" height="auto" loop="" id="video" preload="none"
-        src="./img/605J Prussian Blue Copper_Centralised-0x720-3000k.mp4" type="video/mp4" muted="" playsinline=""
-        autostart="0" data-autoplay="0" data-enable-timeout="true" poster=""
-        class="full-width-image__inline-video js-inline-video-tag"> Your browser does not support the video tag.</video>
-    </div>
-    <div id="video-play-btn" class="play-pause-btn-container active paused play-pause-btn">
-      <a class="play_icon_btn" id="play_icon_btn" role="button" href="javascript:void(0);" aria-label="Play animation"
-        data-analytics-action-name="button~play animation.">
-        <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <g id="Spec" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" opacity="0.704171317">
-            <g id="Desktop-Layout-|-Dark" transform="translate(-1240.000000, -814.000000)">
-              <g id="Play-Button" transform="translate(1240.000000, 814.000000)">
-                <path id="Oval"
-                  d="M32,16 C32,24.8362667 24.8362667,32 16,32 C7.16373333,32 0,24.8362667 0,16 C0,7.16373333 7.16373333,0 16,0 C24.8362667,0 32,7.16373333 32,16">
-                </path>
-                <path id="Group"
-                  d="M12.5713067,8.6 L12.5713067,23.4 L22.5713067,15.9994667 L12.5713067,8.6 Z M13.7713067,10.9808 L20.55424,15.9994667 L13.7713067,21.0192 L13.7713067,10.9808 Z">
-                </path>
-              </g>
+    <div class="video-banner__wrapper">
+      <div class="video-banner__container">
+        <video width="100%" height="auto" loop="" id="video" preload="none"
+          src="./img/605J Prussian Blue Copper_Centralised-0x720-3000k.mp4" type="video/mp4" muted="" playsinline=""
+          autostart="0" data-autoplay="0" autoplay="1" poster="" class="video-banner__video js_video">
+        </video>
+      </div>
+      <div id="video-play-btn" class="video-banner__control active js_video_control">
+        <a class="video-banner__play js_play_icon_btn" role="button" href="javascript:void(0);"
+          aria-label="Play animation" data-analytics-action-name="button~play animation.">
+          <svg fill="none" height="32px" width="32px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60 60" xml:space="preserve">
+            <g opacity="0.704171317">
+              <circle cx="30" cy="30" r="30" fill="#333333" />
+              <path fill="#ffffff"
+                d="M45.563,29.174l-22-15c-0.307-0.208-0.703-0.231-1.031-0.058C22.205,14.289,22,14.629,22,15v30 c0,0.371,0.205,0.711,0.533,0.884C22.679,45.962,22.84,46,23,46c0.197,0,0.394-0.059,0.563-0.174l22-15 C45.836,30.64,46,30.331,46,30S45.836,29.36,45.563,29.174z M24,43.107V16.893L43.225,30L24,43.107z">
+              </path>
             </g>
-          </g>
-        </svg>
-      </a>
-      <a class="pause_icon_btn" id="pause_icon_btn" href="javascript:void(0);" role="button"
-        aria-label="Pause animation" data-analytics-action-name="button~pause animation.">
-        <svg class="svg-dark-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          width="32px" height="32px" viewBox="0 0 32 32" version="1.1">
-          <defs>
-            <path d="M1.5,0 L1.5,15 L0,15 L0,0 L1.5,0 Z M8.25,0 L8.25,15 L6.75,15 L6.75,0 L8.25,0 Z" id="path-1"></path>
-          </defs>
-          <g id="Spec" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Group-2">
-              <g id="Email-Element/Round-Button/Play-Button---Dark-36x36px-(Triple-Image-/-one-third-width-version)"
-                fill="#333333" opacity="0.700079055">
-                <g id="Play-Button---Dark-(32x32px)">
-                  <path
-                    d="M16,32 C7.16373333,32 0,24.8362667 0,16 C0,7.16373333 7.16373333,0 16,0 C24.8362667,0 32,7.16373333 32,16 C32,24.8362667 24.8362667,32 16,32 Z"
-                    id="Fill-1"></path>
+          </svg>
+        </a>
+        <a class="video-banner__pause js_pause_icon_btn" href="javascript:void(0);" role="button"
+          aria-label="Pause animation" data-analytics-action-name="button~pause animation.">
+          <svg class="svg-dark-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="32px" height="32px" viewBox="0 0 32 32" version="1.1">
+            <defs>
+              <path d="M1.5,0 L1.5,15 L0,15 L0,0 L1.5,0 Z M8.25,0 L8.25,15 L6.75,15 L6.75,0 L8.25,0 Z" id="path-1">
+              </path>
+            </defs>
+            <g id="Spec" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+              <g id="Group-2">
+                <g id="Email-Element/Round-Button/Play-Button---Dark-36x36px-(Triple-Image-/-one-third-width-version)"
+                  fill="#333333" opacity="0.700079055">
+                  <g id="Play-Button---Dark-(32x32px)">
+                    <path
+                      d="M16,32 C7.16373333,32 0,24.8362667 0,16 C0,7.16373333 7.16373333,0 16,0 C24.8362667,0 32,7.16373333 32,16 C32,24.8362667 24.8362667,32 16,32 Z"
+                      id="Fill-1"></path>
+                  </g>
                 </g>
-              </g>
-              <g id="Icons/32/pause" transform="translate(11.923750, 8.545000)">
-                <mask id="mask-2" fill="white">
-                  <use xlink:href="#path-1"></use>
-                </mask>
-                <use id="Icon" fill="#333333" xlink:href="#path-1"></use>
-                <g id="Colour" opacity="0.9" mask="url(#mask-2)" fill="#C9C9C9">
-                  <g transform="translate(-8.923750, -5.545000)">
-                    <rect x="0" y="0" width="200" height="200"></rect>
+                <g id="Icons/32/pause" transform="translate(11.923750, 8.545000)">
+                  <mask id="mask-2" fill="white">
+                    <use xlink:href="#path-1"></use>
+                  </mask>
+                  <use id="Icon" fill="#333333" xlink:href="#path-1"></use>
+                  <g id="Colour" opacity="0.9" mask="url(#mask-2)" fill="#C9C9C9">
+                    <g transform="translate(-8.923750, -5.545000)">
+                      <rect x="0" y="0" width="200" height="200"></rect>
+                    </g>
                   </g>
                 </g>
               </g>
             </g>
-          </g>
-        </svg>
-      </a>
+          </svg>
+        </a>
+      </div>
+
+      <div class="video-banner__text">
+        
+      </div>
     </div>
   </section>
 
